# rag-project

./: .env.example  .gitignore  pyproject.toml  requirements.txt
data/textfiles/: coder.txt  ishan.txt
notebook/: document.ipynb
